[gd_scene load_steps=6 format=3 uid="uid://ca5t2d35dmbkh"]

[ext_resource type="Script" uid="uid://b3qkwfkt8wqgl" path="res://entities/note/note.gd" id="1_ymd6p"]

[sub_resource type="BoxMesh" id="BoxMesh_41n4r"]
size = Vector3(0.2, 0.2, 0.2)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ymd6p"]
spread = 180.0
initial_velocity_max = 2.0
scale_min = 0.19999999
scale_max = 1.1999999

[sub_resource type="BoxMesh" id="BoxMesh_co070"]
size = Vector3(0.02, 0.02, 0.02)

[sub_resource type="BoxShape3D" id="BoxShape3D_ymd6p"]
size = Vector3(0.2, 0.2, 0.2)

[node name="Note" type="Node3D"]
transform = Transform3D(0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 0, 0, 0)
script = ExtResource("1_ymd6p")

[node name="NoteModel" type="MeshInstance3D" parent="."]
unique_name_in_owner = true
mesh = SubResource("BoxMesh_41n4r")
skeleton = NodePath("../..")

[node name="ExplosionEffect" type="GPUParticles3D" parent="."]
unique_name_in_owner = true
emitting = false
amount = 40
lifetime = 0.5
one_shot = true
explosiveness = 0.9
process_material = SubResource("ParticleProcessMaterial_ymd6p")
draw_pass_1 = SubResource("BoxMesh_co070")

[node name="SpikeDetector" type="Area3D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 48

[node name="CollisionShape3D" type="CollisionShape3D" parent="SpikeDetector"]
shape = SubResource("BoxShape3D_ymd6p")

[node name="BladeDetector" type="Area3D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 192
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="BladeDetector"]
shape = SubResource("BoxShape3D_ymd6p")

[node name="PoleDetector" type="Area3D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 256
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="PoleDetector"]
shape = SubResource("BoxShape3D_ymd6p")
